--- a/journal/202206.md
+++ b/journal/202206.md
@@ -40,22 +40,11 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
-{
-
-- _For each project, cover its most notable dev work._
-- _For each project, the order of reporting is "most released first": changes released to end users, merged to master, in progress (work started), discussions and future plans._
-- _Add sections for any other project with notable activity._
-- _Drop sections without notable updates._
-
-}
-
 <a id="dcrd" />
 
 **[dcrd](https://github.com/decred/dcrd)**
 
 _dcrd is a full node implementation that powers Decred's peer-to-peer network around the world._
-
-{ _Check https://github.com/decred/dcrd/commits/master ._}
 
 - [Optimized](https://github.com/decred/dcrd/pull/2957) cumulative work calculation using the recent zero-allocation [256-bit integers](https://github.com/decred/dcrd/pull/2787) package. The result is ~100 MiB less heap usage on average, and ~5% faster initial blockchain sync time.
 - Support [clean shutdown](https://github.com/decred/dcrd/pull/2958) on more Unix variants and also on certain Windows events (user logging off, closing terminal window, system shutdown).
@@ -63,15 +52,13 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 - [Removed](https://github.com/decred/dcrd/pull/2961) the spend journal pruning code that became unneeded with the removal of the address index.
 - Explicitly [reject](https://github.com/decred/dcrd/pull/2963) standalone `treasurybase` transactions. { _We will likely skip/group this as "minor" but to understand this I wonder what would be a simple description of "proper" (i.e. "not standalone") `treasurybase` transactions?_ }
 - [Removed](https://github.com/decred/dcrd/pull/2964) the policy that allowed low-fee/free transactions to get relayed and mined. It served its purpose in the past at the cost of some downsides. Now it is unneeded and users can bump the priority of "stuck" transactions using additional transactions (aka Child Pays For Parent - CPFP). Related `--norelaypriority` and `--limitfreerelay` CLI flags were deprecated.
-- ~5 smaller improvement PRs. { 2959 2960 2962 2965 2966 }
+- ~5 smaller improvement PRs. { drop when done: 2959 2960 2962 2965 2966 }
 
 <a id="dcrwallet" />
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
 _dcrwallet is a wallet server used by command-line and graphical wallet apps._
-
-{ _Check https://github.com/decred/dcrwallet/commits/master ._}
 
 - [Do not require](https://github.com/decred/dcrwallet/pull/2168) deprecated V1 compact filters support when querying HTTPS seeder for nodes.
 
@@ -80,8 +67,6 @@ _dcrwallet is a wallet server used by command-line and graphical wallet apps._
 **[Decrediton](https://github.com/decred/decrediton)**
 
 _Decrediton is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
-
-{ _Check https://github.com/decred/decrediton/commits/master ._}
 
 - Added revoked [ticket hash](https://github.com/decred/decrediton/pull/3770) to the Revocation transaction page.
 - Fixed a possible [never ending loading button](https://github.com/decred/decrediton/pull/3769) in the Treasury Spending tab.
@@ -94,20 +79,12 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 _Politeia is Decred's proposal system. It is used to request funding from the Decred treasury._
 
-{ _Check Check these repos:_
-
-- _. https://github.com/decred/politeia/commits/master ._
-- _. https://github.com/decred/politeiagui/commits/master ._
-- _. https://github.com/decred/pi-ui/commits/master ._
-
-}
-
 Backend:
 
 - Updated and improved [signal-handling](https://github.com/decred/politeia/pull/1644) logic in politeiavoter by supporting SIGTERM. On Windows, this will shutdown politeiavoter cleanly if the user logs off or if the system is shutting down.
 - Improved [identity logging](https://github.com/decred/politeia/pull/1647) in the dbutil tool.
 - Improved [error handling](https://github.com/decred/politeia/pull/1650) in mysql key-value store implementation.
-- ~2 smaller improvement PRs. { 1643 1646 }
+- ~2 smaller improvement PRs. { drop when done: 1643 1646 }
 
 GUI:
 
@@ -133,8 +110,6 @@ GUI migration to the new [plugin architecture](https://github.com/decred/politei
 
 _vspd is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
 
-{ _Check https://github.com/decred/vspd/commits/master ._}
-
 - More refactoring to [remove global vars](https://github.com/decred/vspd/issues/339) to make the code more reusable.
 
 <a id="dcrlnd" />
@@ -143,19 +118,15 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 
 _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-cost transactions._
 
-{ _Check https://github.com/decred/dcrlnd/commits/master ._}
-
 - Added a new [Initial Chain Sync](https://github.com/decred/dcrlnd/pull/158) RPC service that allows to track the progress of the initial chain sync process and is useful for clients that connect to a dcrlnd instance that is still in the early startup stage to provide better feedback to the user.
 - Fixed the [expected location](https://github.com/decred/dcrlnd/pull/159) of the `peers.json` file when running an embedded dcrwallet install in SPV mode.
-- 4 commits with smaller improvements. { 157 }
+- 4 commits with smaller improvements. { drop when done: 157 }
 
 <a id="dcrdex" />
 
 **[DCRDEX](https://github.com/decred/dcrdex)**
 
 _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swaps._
-
-{ _Check https://github.com/decred/dcrdex/commits/master ._}
 
 User-facing changes:
 
@@ -184,38 +155,14 @@ Internal, developer, and other changes:
 - Added utility for running different combinations of client [harness tests](https://github.com/decred/dcrdex/pull/1632) on simnet.
 - Added [metering](https://github.com/decred/dcrdex/pull/1629) where processing of new blocks will not be triggered more frequent than every 10 seconds. e.g. in Ethereum occasionally several blocks are generated in a single second.
 - Reduced [lock contention](https://github.com/decred/dcrdex/pull/1563) and fixed a memory leak in swap code.
-- ~7 smaller fixes and improvements. { 1651 1655 1675 1680 1668 1685 1689 }
-- ~9 bug fixes { 1647 1665 1662 1644 1677/race 1669*4 }
-
-<a id="dcrandroid" />
-
-**[Decred Wallet (Android)](https://github.com/planetdecred/dcrandroid)**
-
-{ _Check https://github.com/planetdecred/dcrandroid/commits ._}
-
-In progress:
-
-- Update API for getting [USD balance](https://github.com/planetdecred/dcrandroid/issues/633). { _drop, it's not a PR_ }
-
-<a id="dcrios" />
-
-**[Decred Wallet (iOS)](https://github.com/planetdecred/dcrios)**
-
-{ _Check https://github.com/planetdecred/dcrios/commits/master ._}
-
-In progress:
-
-- Update API for getting [USD balance](https://github.com/planetdecred/dcrios/issues/911). { _drop, it's not a PR_ }
+- ~7 smaller fixes and improvements. { drop when done: 1651 1655 1675 1680 1668 1685 1689 }
+- ~9 bug fixes { drop when done: 1647 1665 1662 1644 1677/race 1669*4 }
 
 <a id="godcr" />
 
 **[GoDCR](https://github.com/planetdecred/godcr)**
 
 _GoDCR is a lightweight desktop GUI wallet with integrated staking, privacy, Politeia voting, consensus voting, and more._
-
-{ _Check https://github.com/planetdecred/godcr/commits/master ._}
-
-{ _Group e.g. by new feature dev, UI design updates, bug fixes, internal._ }
 
 Feature development:
 
@@ -259,8 +206,6 @@ Bug fixes:
 
 _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia proposals, markets, and more._
 
-{ _Check https://github.com/decred/dcrdata/commits/master ._}
-
 - Use [Clipboard API](https://github.com/decred/dcrdata/pull/1917) on the UI.
 - Removed experimental [CockroachDB](https://github.com/decred/dcrdata/pull/1902) support.
 - Fixed incorrect [vote status](https://github.com/decred/dcrdata/pull/1919) display.
@@ -272,17 +217,13 @@ _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia p
 
 _TinyDecred is a toolkit for integrating Decred into Python projects. It includes an experimental light GUI wallet based on PyQt5._
 
-{ _Check https://github.com/decred/tinydecred/commits/master ._ }
-
-- { buck has been hacking on something very interesting, ask him for the details https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg }
+- { _buck has been hacking on something very interesting, write up a summary or ask him for the details https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg ._ }
 
 <a id="dcrdocs" />
 
 **[dcrdocs](https://github.com/decred/dcrdocs)**
 
 _dcrdocs is the source code for Decred [user documentation](https://docs.decred.org/)._
-
-{ _Check https://github.com/decred/dcrdocs/commits/master ._}
 
 - Added [1.7 consensus votes](https://github.com/decred/dcrdocs/pull/1197) to Consensus Vote Archive. Also added versions and release dates of Decred software implementing consensus changes.
 - Updates for the [DCP-10](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki): [New numbers and graphs](https://github.com/decred/dcrdocs/pull/1198) for the [Issuance page](https://docs.decred.org/advanced/issuance/), updated [block reward values](https://github.com/decred/dcrdocs/pull/1202) on the docs home page.
@@ -298,8 +239,6 @@ _dcrdocs is the source code for Decred [user documentation](https://docs.decred.
 
 _dcrweb is the source code for the decred.org website._
 
-{ _Check https://github.com/decred/dcrweb/commits/master ._}
-
 - Added [disclaimer to Exchanges page](https://github.com/decred/dcrweb/pull/1043) letting users know only DCRDEX is self custodial and will not request additional information.
 - Removed [Contributors page](https://github.com/decred/dcrweb/pull/1047) after multiple discussions with the general consensus that it had poorly reflected reality.
 - [Updated](https://github.com/decred/dcrweb/pull/1048) Hugo, nginx, and Lottie webplayer. 
@@ -308,7 +247,6 @@ _dcrweb is the source code for the decred.org website._
 
 **Other**
 
-- { _Smaller/common things go here._ }
 - @degeri posted his [last update](https://github.com/decred/dcrbounty/pull/88) for the Bug Bounty program. One vulnerability report has been disclosed - Android and iOS wallets were lacking screenshot protections and this has been fixed. Congrats to @trapp3rhat for joining the Hall of Fame.
 - { _More exotic dev sources: https://github.com/xaur/decred-news/blob/docs/sources.md#development ._ }
 
