--- a/journal/202206.md
+++ b/journal/202206.md
@@ -69,7 +69,7 @@ _dcrwallet is a wallet server used by command-line and graphical wallet apps._
 _Decrediton is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
 - Added revoked [ticket hash](https://github.com/decred/decrediton/pull/3770) to the Revocation transaction page.
-- Fixed a possible [never ending loading button](https://github.com/decred/decrediton/pull/3769) in the Treasury Spending tab.
+- Fixed a possible [never-ending loading button](https://github.com/decred/decrediton/pull/3769) on the Treasury Spending tab.
 - Fixed [scrolling not working](https://github.com/decred/decrediton/pull/3771) when UI animations were disabled.
 - Extended automated tests to verify the recent fixes.
 
@@ -81,9 +81,9 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 Backend:
 
-- Updated and improved [signal-handling](https://github.com/decred/politeia/pull/1644) logic in politeiavoter by supporting SIGTERM. On Windows, this will shutdown politeiavoter cleanly if the user logs off or if the system is shutting down.
+- Updated and improved [signal-handling logic](https://github.com/decred/politeia/pull/1644) in politeiavoter by supporting SIGTERM. On Windows, this will shutdown politeiavoter cleanly if the user logs off or if the system is shutting down.
 - Improved [identity logging](https://github.com/decred/politeia/pull/1647) in the dbutil tool.
-- Improved [error handling](https://github.com/decred/politeia/pull/1650) in mysql key-value store implementation.
+- Improved [error handling](https://github.com/decred/politeia/pull/1650) in the MySQL key-value store implementation.
 - ~2 smaller improvement PRs. { drop when done: 1643 1646 }
 
 GUI:
