People add stats

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -259,15 +259,14 @@ Welcome to new first-time contributors with code merged to master:
 
 { _Interviews with contributors. Link to #media for generic references (e.g. "Check the 3 interviews with devs") or link directly when referencing a specific interview._ }
 
-Community stats as of {date}:
+Community stats as of Jul 1 (compared to Jun 1):
 
-- Politeia users: {} (+{})
-- [Twitter](https://twitter.com/decredproject) followers: {} (+{})
-- [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
-- [Matrix](https://chat.decred.org/) #general users: {} (+{})
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
-- [Telegram](https://t.me/Decred) users: {} (+{})
-- [YouTube](https://www.youtube.com/decredchannel) subscribers: {} (+{}), views: {} (+{})
+- [Twitter](https://twitter.com/decredproject) followers: 54,380 (-94)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 12,636 (+5)
+- [Matrix](https://chat.decred.org/) #general users: 689 (+12)
+- [Discord](https://discord.gg/GJ2GXfz) users: 2,326 (+21)
+- [Telegram](https://t.me/Decred) users: 2,810 (-48)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,630 (+0), views: 210K (+1K)
 
 { _Optional: List/link notable SM dynamics._ }
 
