--- a/journal/202206.md
+++ b/journal/202206.md
@@ -13,7 +13,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 { _Month's highlights, no links here, 5-7 bullets max._
 
 - Ethereum smart contract used in DCRDEX passed its first audit with great results.
-- 
+- Politeia busy with 3 proposals approved, 1 rejected and 3 new submitted.
 - 
 - 
 - 
@@ -261,21 +261,17 @@ Community stats as of Jul 1 (compared to Jun 1):
 
 ## Governance
 
-{ _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
-
 In June the new [treasury](https://dcrdata.decred.org/treasury) received 9,134 DCR worth $256K at June's average rate of $28.06. 2,426 DCR was spent to pay contractors, worth $68K at June's rate, or $100K at May's billing rate of $41.46.
 
-With the activation of DCP-0007 it was once again possible to pay contractors from the new Treasury using the proper stakeholder-approved method. This [transaction](https://explorer.dcrdata.org/tx/18cede674d4d47919e7fcdb48fef0f56162a1a2f9536d5f08ac70e093a14e4f5) hit the required voting threshold (with 4,822 Yes votes and 0 No votes) on June 27th, there were 23 outputs, suggesting roughly this number of contractors/intermediaries were paid in the month, amounts ranging from 2.87 DCR to 767 DCR.
+With the activation of DCP-0007 it was once again possible to pay contractors from the new treasury using the proper stakeholder-approved method. This [transaction](https://explorer.dcrdata.org/tx/18cede674d4d47919e7fcdb48fef0f56162a1a2f9536d5f08ac70e093a14e4f5) hit the required voting threshold (with 4,822 Yes votes and 0 No votes) on June 27th, there were 23 outputs, suggesting roughly this number of contractors/intermediaries were paid in the month, amounts ranging from 2.87 DCR to 767 DCR.
 
 As of July 3, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 799,639 DCR (17.9 million USD at $22.39).
-
-{ _Report any other activity with the legacy or new treasury._ }
 
 Three new proposals were submitted in June. 
 
 The [Decred Brazil proposal](https://proposals.decred.org/record/7f1d013) requests a budget of $22,000 for social media content production and events in Brazil, it is being led by @victorguedes.
 
-The [GoDCR proposal](https://proposals.decred.org/record/0ef42e5) requests $250,000, edited down from $300,000 initially, to continue development of GoDCR for one year. GoDCR was funded [initially](https://proposals-archive.decred.org/proposals/e5c8051) by the Treasury but a [request](https://proposals.decred.org/record/f7d9fc8) for $200,000 funding was rejected in Oct 2021 by stakeholders with 49% Yes votes.
+The [GoDCR proposal](https://proposals.decred.org/record/0ef42e5) requests $250,000, edited down from $300,000 initially, to continue development of GoDCR for one year. GoDCR was funded [initially](https://proposals-archive.decred.org/proposals/e5c8051) by the treasury but a [request](https://proposals.decred.org/record/f7d9fc8) for $200,000 funding was rejected in Oct 2021 by stakeholders with 49% Yes votes.
 
 [Decred Magazine](https://proposals.decred.org/record/3bb2c7e) has requested $34,000 for a year of content production and aggregation on the new website [DecredMagazine.com](https://www.decredmagazine.com/), led by @phoenixgreen.
 
@@ -288,8 +284,6 @@ The [proposal](https://proposals.decred.org/record/7057e0b) to fund Decred conte
 The [proposal](https://proposals.decred.org/record/da2f32d) to fund continuation of the Bug Bounty program was approved with 99% Yes votes and turnout of 56%.
 
 The [proposal](https://proposals.decred.org/record/6bdffcb) to fund university events in Uganda was rejected with 47% Yes votes and turnout of 6%.
-
-{ _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
 See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the month's proposals.
 
