Gov, Eco add bits

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -285,7 +285,7 @@ The [proposal](https://proposals.decred.org/record/da2f32d) to fund continuation
 
 The [proposal](https://proposals.decred.org/record/6bdffcb) to fund university events in Uganda was rejected with 47% Yes votes and turnout of 6%.
 
-See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the month's proposals.
+See Politeia Digest [issue 52](https://blockcommons.red/politeia-digest/issue052/) for more details on the month's proposals.
 
 
 ## Network
@@ -321,9 +321,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 44 nodes (-
 
 { _Hint: "Ecosystem" is about new units of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors, investors. It is more about user-facing services, businesses, and wider adoption, while Network is more about the backbone. Use bullets or paragraphs, whatever looks best._ }
 
-{ _Check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list._ }
-
-{ _Check https://github.com/decred/dcrwebapi/pulls for new VSPs under review._ }
+Two new VSPs are in the process of being listed on decred.org and Decrediton: [dcrhive.com](https://dcrhive.com/) and [vspd.bass.cf](https://vspd.bass.cf/).
 
 { _Check #services room for news._ }
 
@@ -336,7 +334,6 @@ https://twitter.com/jz_bz/status/1535350896091189249 - JZ Set up a #Decred node 
 https://jobsonblocks.com/ - Offer/request jobs - get paid in Crypto. DCR included.
 
 Luxor Mining Pool [shutdown](https://www.reddit.com/r/decred/comments/v6d0lw/luxor_shutdown_their_dcr_mining_pool/) (need further source?)
-
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
