Eco write 2 stories

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -14,7 +14,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - Ethereum smart contract used in DCRDEX passed its first audit with great results.
 - Politeia busy with 3 proposals approved, 1 rejected and 3 new submitted.
-- 
+- DCR listed on 2 exchanges
 - 
 - 
 
@@ -329,11 +329,15 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 44 nodes (-
 
 - [Guardarian](https://guardarian.com/) has [announced](https://www.reddit.com/r/decred/comments/v7mske/more_ways_to_buy_decred/) that buying and selling DCR for fiat is possible on their platform. Supported fiat currencies are EUR, USD, and GBP, and they can be sent over systems like MasterCard &Visa, Swift, Sepa, and Faster Payments! Fiat payouts go directly to user's bank account, while purchased coins go directly to users's wallet. There is a minimum amount to buy (EUR 30) and the service fee (EUR 2.49) is added to the exchange rate. Guardarian is licensed in Estonia.
 
-- Bitpanda listing https://twitter.com/bitpanda/status/1537047267647037442
+- [Bitpanda](https://www.bitpanda.com/en) announced that [DCR is listed](https://twitter.com/bitpanda/status/1537047267647037442) on their exchange and acknowledged its open governance and sustainable funding. Bitpanda is [headquartered](https://en.wikipedia.org/wiki/Bitpanda) in Vienna, Austria.
 
 - BisonPool coverage, write up from https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$f8rOaEpmCcfyRirT591J7PxG7oGzLN7zCPNS5AhDgZU
 
-- https://jobsonblocks.com/ - Offer/request jobs - get paid in Crypto. DCR included.
+- BisonPool [revealed](https://twitter.com/BisonPool/status/1540362478588203011) that it will be a custodial staking service allowing to stake with less than a full ticket (recently around 220 DCR). The reveal followed some [teasing](https://twitter.com/BisonPool/status/1537812247283744769) on Twitter demonstrating a ticket purchased from 3 parts around 80 DCR each. The announcement received [some criticism](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Ixlkkg5b0Pf7p6WMsz8X7etigqAg9p6XSCkp8EyN-9c) in the Matrix #media room for its custodial nature. BisonPool came to [respond](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Pn_E4JWbdTKheQ8NfwKFDm5auZLIhPSUv2ruCmFs-cs) and explain their vision and strategy.
+
+- [JobsOnBlocks](https://jobsonblocks.com) is job board for offering/requesting jobs and get paid in crypto. DCR included. { has anyone checked it? }
+
+- VSP users may find these two tables useful for evaluating and choosing VSP providers: one summarizing how legacy VSPs [have been shutdown](https://github.com/decred/vspd/issues/231#issuecomment-774877129), and another showing how the VSP operators [have been upgrading](https://github.com/decred/vspd/issues/231#issuecomment-1046703692) their servers (earlier is better).
 
 - Luxor's Decred mining pool shutdown was [rumored on Reddit](https://www.reddit.com/r/decred/comments/v6d0lw/luxor_shutdown_their_dcr_mining_pool/) after one user received an email asking to withdraw all funds by Jun 10. Screenshot of the email had a notable factual error "DCR is going to PoS". While Decred has [reduced](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki) PoW miners' block reward share from 60% to 10%, there is no intent or even a discussion to switch to pure PoS. As of Jul 9, there has been no official commentary from [@LuxorTechTeam](https://nitter.net/LuxorTechTeam) and their API still report the hashrate of 1.5 Ph/s (1.5% of network's total 95 Ph/s) and 107 miners.
 
