--- a/journal/202206.md
+++ b/journal/202206.md
@@ -327,7 +327,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 44 nodes (-
 
 - BisonPool [revealed](https://twitter.com/BisonPool/status/1540362478588203011) that it will be a custodial staking service allowing to stake with less than a full ticket (recently around 220 DCR). The reveal followed some [teasing](https://twitter.com/BisonPool/status/1537812247283744769) on Twitter demonstrating a ticket purchased from 3 parts around 80 DCR each. The announcement received [some criticism](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Ixlkkg5b0Pf7p6WMsz8X7etigqAg9p6XSCkp8EyN-9c) in the Matrix #media room for its custodial nature. BisonPool came to [respond](https://matrix.to/#/!ggjLwhBHTjsMROezFf:decred.org/$Pn_E4JWbdTKheQ8NfwKFDm5auZLIhPSUv2ruCmFs-cs) and explain their vision and strategy.
 
-- [JobsOnBlocks](https://jobsonblocks.com) is job board for offering/requesting jobs and get paid in crypto. DCR included. { has anyone checked it? }
+- [JobsOnBlocks](https://jobsonblocks.com) is a new job board for offering/requesting jobs and get paid in crypto. Site beta was [launched in June](https://twitter.com/Toussaint_dev/status/1537512603345293312) and as of writing it supports 5 coins (including DCR) and has 3 jobs posted.
 
 - VSP users may find these two tables useful for evaluating and choosing VSP providers: one summarizing how legacy VSPs [have been shutdown](https://github.com/decred/vspd/issues/231#issuecomment-774877129), and another showing how the VSP operators [have been upgrading](https://github.com/decred/vspd/issues/231#issuecomment-1046703692) their servers (earlier is better).
 
