--- a/journal/202206.md
+++ b/journal/202206.md
@@ -340,21 +340,20 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
+Monde PR's achievements: 
 
-Monde PR’s achievements: 
-
-- Pitched Decred to five PR opportunities 
-- Responded to one request for commentary 
-- Secured one media interview
+- Pitched Decred to 5 PR opportunities. 
+- Responded to 1 request for commentary. 
+- Secured 1 media interview.
 
 Secured the following news articles:
 
-- A video interview with [Invezz](https://invezz.com/news/2022/06/01/co-founder-jake-yocom-piatt-discusses-alternate-stores-of-value-to-bitcoin/) and @jy-p talking about Decred's governance model, the hybrid PoW/PoS model, project treasury, privacy, future outlook and how we compare to Bitcoin
-- Invezz posted the story in ten other languages including [Dutch](https://invezz.com/nl/nieuws/2022/06/01/mede-oprichter-jake-yocom-piatt-bespreekt-alternatief-oppotmidd-voor-bitcoin/) and [Swedish](https://invezz.com/sv/nyheter/2022/06/01/medgrundaren-jake-yocom-piatt-diskuterar-alternativa-vardebutiker-till-bitcoin/)
-- The story was also syndicated to three publications including [Bitcoin Insider](https://www.bitcoininsider.org/article/168719/co-founder-jake-yocom-piatt-discusses-alternate-stores-value-bitcoin) and [Crypto News BTC](https://cryptonewsbtc.org/2022/06/01/co-founder-jake-yocom-piatt-discusses-alternate-stores-of-value-to-bitcoin/)
-- @jy-p appeared on the [CoinJournal podcast](https://coinjournal.net/news/interview-with-decred-project-lead-jake-yocom-piatt/) talking about a range of topics including sovereign money, true decentralization, DEXs and privacy
-- CoinJournal posted the interview on its [Norway](https://coinjournal.net/no/nyheter/intervju-med-decred-prosjektleder-jake-yocom-piatt/) and [Finland](https://coinjournal.net/fi/uutiset/haastattelussa-decred-projektin-johtaja-jake-yocom-piatt/) sites. 
-- The interview was also syndicated to [Bitcoin Insider](https://www.bitcoininsider.org/article/172467/interview-decred-project-lead-jake-yocom-piatt)
+- A video interview with [Invezz](https://invezz.com/news/2022/06/01/co-founder-jake-yocom-piatt-discusses-alternate-stores-of-value-to-bitcoin/) and @jy-p talking about Decred's governance model, the hybrid PoW/PoS model, project treasury, privacy, future outlook and how we compare to Bitcoin.
+- Invezz posted the story in 10 other languages including [Dutch](https://invezz.com/nl/nieuws/2022/06/01/mede-oprichter-jake-yocom-piatt-bespreekt-alternatief-oppotmidd-voor-bitcoin/) and [Swedish](https://invezz.com/sv/nyheter/2022/06/01/medgrundaren-jake-yocom-piatt-diskuterar-alternativa-vardebutiker-till-bitcoin/).
+- The story was also syndicated to three publications including [Bitcoin Insider](https://www.bitcoininsider.org/article/168719/co-founder-jake-yocom-piatt-discusses-alternate-stores-value-bitcoin) and [Crypto News BTC](https://cryptonewsbtc.org/2022/06/01/co-founder-jake-yocom-piatt-discusses-alternate-stores-of-value-to-bitcoin/).
+- @jy-p appeared on the [CoinJournal podcast](https://coinjournal.net/news/interview-with-decred-project-lead-jake-yocom-piatt/) talking about a range of topics including sovereign money, true decentralization, DEXs and privacy.
+- CoinJournal posted the interview on its [Norway](https://coinjournal.net/no/nyheter/intervju-med-decred-prosjektleder-jake-yocom-piatt/) and [Finland](https://coinjournal.net/fi/uutiset/haastattelussa-decred-projektin-johtaja-jake-yocom-piatt/) sites.
+- The interview was also syndicated to [Bitcoin Insider](https://www.bitcoininsider.org/article/172467/interview-decred-project-lead-jake-yocom-piatt).
 
 
 ## Events
