--- a/journal/202206.md
+++ b/journal/202206.md
@@ -362,12 +362,12 @@ Secured the following news articles:
 
 **Attended:**
 
-- https://decredcommunity.github.io/events/index/20220601.1
-- [Decred Social Meetup](https://www.meetup.com/chicago-decred-meetup/events/286491971/) in Chicago, USA. { _check if it happened, tell something about it_ }
+- @arij [signed a partnership](https://decredcommunity.github.io/events/index/20220601.1) with Moroccan JCI, which is the first branch of the global [Junior Chamber International](https://en.wikipedia.org/wiki/Junior_Chamber_International) NGO in Africa and the Arab world. The partnership includes providing training to members of this organization and companies concerning blockchain and Decred tech.
+- [Decred Social Meetup](https://www.meetup.com/chicago-decred-meetup/events/286491971/) in Chicago, USA. { _drop if we get no response in #events on whether it happened_ }
 
 **Upcoming:**
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
+- On October 6-7 Decred will be participating in [Crypto Forum](https://twitter.com/Decred_BR/status/1540102065128603649) in Sao Paulo, Brazil.
 
 { _Announcements from events ppl._ }
 
