--- a/journal/202206.md
+++ b/journal/202206.md
@@ -406,11 +406,11 @@ Secured the following news articles:
 
 **Art and fun:**
 
-- {}
+- u/ersfbddfgwe created a [music track](https://soundcloud.com/openbeats/ob1) as part of the Open Beats idea, which has a goal to provide community-made music that can be freely used for any Decred-related content
 
 **Translations:**
 
-- {}
+- Decred Journal April 2022 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij) and Chinese (@Dominic). The May 2022 issue was also translated to Chinese (@Dominic). Thank you all and welcome back in the game!
 
 **Non-English content:**
 
