--- a/journal/202206.md
+++ b/journal/202206.md
@@ -403,12 +403,12 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- [Should we re-brand Decred DEX?](https://www.reddit.com/r/decred/comments/v3gxa8/should_we_rebrand_decred_dex/) by @buck54321
-- https://www.reddit.com/r/decred/comments/v5ipch/weekly_contributions_week_1/ { check if anything of note }
-
+- [Should we re-brand Decred DEX?](https://www.reddit.com/r/decred/comments/v3gxa8/should_we_rebrand_decred_dex/) by @buck54321. @bee has collected the 12 name ideas posted so far [in one table](https://gist.github.com/xaur/5527e5ed280a448e56a62751ab636f14). [QuackDEX](https://www.reddit.com/r/decred/comments/v3gxa8/should_we_rebrand_decred_dex/ib4o30g/) has a chance.
+- The Weekly Contributions initiative had its [Week 1](https://www.reddit.com/r/decred/comments/v5ipch/weekly_contributions_week_1/), [Week 2](https://www.reddit.com/r/decred/comments/vav9h6/weekly_contributions_week_2/) and [Week 3](https://www.reddit.com/r/decred/comments/vg6rpn/weekly_contributions_week_3/) with a few old-timers trying to bootstrap it with a couple of submissions. Anything from running a full node to making a cool tweet thread or a meme counts, so don't hesitate to participate!
 
 Selected Twitter discussions:
 
+- @jy-p commented on central banks painting themselves into a corner with FRS having to choose between [allowing inflation or causing a recession](https://twitter.com/behindtext/status/1537151269357375490), which presents a huge [opportunity for crypto](https://twitter.com/behindtext/status/1537587436905439232), although it's not expected to be a smooth ride.
 - Vitalik Buterin [stealth-pushed](https://twitter.com/VitalikButerin/status/1540233065368354817) "the 2013-15 era designs where you have interwoven PoW and PoS blocks" in response to Dan Robinson's poll on changing Bitcoin, but refrained from mentioning [any specific project](https://cointelegraph.com/news/decred-an-innovative-cryptocurrency-or-a-well-arranged-scam) implementing those designs, hopefully to build up anticipation and discussion among the audience.
 
 
