--- a/journal/202206.md
+++ b/journal/202206.md
@@ -414,9 +414,15 @@ Selected Twitter discussions:
 
 ## Markets
 
-In June DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In June DCR was trading between USD 20.00-41.19 / BTC 0.00102-0.00141. The average daily rate was $28.06.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
+
+@Applesaucesome posted two biweekly [market](https://www.decredmagazine.com/bear-market-blues/) [overviews](https://www.decredmagazine.com/bottom-calling/) with charts and commentary on crypto and the broader market.
+
+> If we turn on both indicators we can find that there is strong confluence between the two. If you pair the 2-year MA Multiplier's buy zones along with price action within the bottom most Mayer Multiple band you'll find that you could've just stocked up hard in those areas and then waited out the bear market. Will this be the same? Only time will tell. Also, don't be irresponsible with your money.
+
+{ image from https://www.decredmagazine.com/bear-market-blues/ and/or https://www.decredmagazine.com/bottom-calling/ }
 
 { _DCRDEX updates, esp. trading volume dynamics._ }
 
