Rel Ext few nits

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -431,19 +431,19 @@ In June DCR was trading between USD 20.00-41.19 / BTC 0.00102-0.00141. The avera
 
 { _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
 
-The crypto markets saw a significant decline in June, and although this paralleled non-crypto market sell-offs more broadly the crypto space saw its own particular issues around the insolvency of centralised entities and fears of contagious bad debt which could wipe out influential players in the crypto markets. One of the major threads to this unwinding concerned Three Arrows Capital (3AC), a hedge fund which was heavily exposed to the collapse of LUNA and then began [struggling](https://www.wsj.com/articles/battered-crypto-hedge-fund-three-arrows-capital-considers-asset-sales-bailout-11655469932) to meet margin calls as the prices for crypto assets tanked - partially instigated by the selling of Terra Foundation's BTC reserve to try and support the collapsing price of TerraUSD. The opacity of dealings between these centralized entities was highlighted by the behavior of 3AC's founders, formerly very active social media users who reportedly ghosted everyone their fund owed money to for an extended period. Over the course of June it has been slowly [revealed](https://www.coindesk.com/business/2022/06/29/genesis-faces-hundreds-of-millions-in-losses-as-3ac-exposure-swamps-crypto-lenders-sources/) that many large industry players had placed money with 3AC (which in turn placed significant sums in Anchor protocol for 20% yield on TerraUSD) and now won't expect to see much of this back. It is striking that such significant events for the crypto markets were mostly known about for some time through the on chain investigations of interested parties sharing their findings on twitter - and that the on chain entities these parties were transacting with held up relatively well through market turbulence, behaving as expected and forecast by observers.
+The crypto markets saw a significant decline in June, and although this paralleled non-crypto market sell-offs more broadly the crypto space saw its own particular issues around the insolvency of centralized entities and fears of contagious bad debt which could wipe out influential players in the crypto markets. One of the major threads to this unwinding concerned Three Arrows Capital (3AC), a hedge fund which was heavily exposed to the collapse of LUNA and then began [struggling](https://www.wsj.com/articles/battered-crypto-hedge-fund-three-arrows-capital-considers-asset-sales-bailout-11655469932) to meet margin calls as the prices for crypto assets tanked - partially instigated by the selling of Terra Foundation's BTC reserve to try and support the collapsing price of TerraUSD. The opacity of dealings between these centralized entities was highlighted by the behavior of 3AC's founders, formerly very active social media users who reportedly ghosted everyone their fund owed money to for an extended period. Over the course of June it has been slowly [revealed](https://www.coindesk.com/business/2022/06/29/genesis-faces-hundreds-of-millions-in-losses-as-3ac-exposure-swamps-crypto-lenders-sources/) that many large industry players had placed money with 3AC (which in turn placed significant sums in Anchor protocol for 20% yield on TerraUSD) and now won't expect to see much of this back. It is striking that such significant events for the crypto markets were mostly known about for some time through the on-chain investigations of interested parties sharing their findings on Twitter - and that the on-chain entities these parties were transacting with held up relatively well through market turbulence, behaving as expected and forecast by observers.
 
-On chain investigations have also revealed things that market participants would have rather kept confidential, like the price at which their leveraged positions would be liquidated. It was seemingly forced selling of assets to meet margin calls on DeFi platforms which alerted the observers to 3AC's issues. For the Solana chain lending service Solend, one particular whale's liquidation price and the scale of their position (>95% of the pool's deposits) was concerning enough that a vote was held to [determine](https://www.coindesk.com/tech/2022/06/19/solana-defi-platform-votes-to-control-whale-account-in-bid-to-avoid-liquidation-chaos/) whether Solend Labs should be granted "emergency powers" to take control over this whale's funds and liquidate their position OTC in a way which would not cause chaos for Solend users generally.
+On-chain investigations have also revealed things that market participants would have rather kept confidential, like the price at which their leveraged positions would be liquidated. It was seemingly forced selling of assets to meet margin calls on DeFi platforms which alerted the observers to 3AC's issues. For the Solana chain lending service Solend, one particular whale's liquidation price and the scale of their position (>95% of the pool's deposits) was concerning enough that a vote was held to [determine](https://www.coindesk.com/tech/2022/06/19/solana-defi-platform-votes-to-control-whale-account-in-bid-to-avoid-liquidation-chaos/) whether Solend Labs should be granted "emergency powers" to take control over this whale's funds and liquidate their position OTC in a way which would not cause chaos for Solend users generally.
 
 Some DAO on DAO [conflict](https://www.coindesk.com/business/2022/06/14/gaming-dao-merit-circle-ygg-terminate-relationship/) occurred in the "play to earn" space, with Merit Circle previously voting to "refund" the investment of Yield Guild Games (YGG) in their tokens - at a price much lower than the current market price. This raised many questions about whether a DAO's members could unilaterally vote to change the terms of a deal the DAO had entered into - complicated significantly by the [confidentiality](https://twitter.com/Crypt0_lawyer/status/1536826577945862144) of the contract between the firms/DAOs. It seems that some members of the "DAOs" have hashed out a [deal](https://www.coindesk.com/business/2022/06/14/gaming-dao-merit-circle-ygg-terminate-relationship/) to bring this to a conclusion without a potentially complex and expensive legal intervention.
 
-For some months now [concern](https://www.coindesk.com/layer2/2022/04/20/is-ethereum-staking-pool-lidos-growth-an-omen-of-centralization/) has been growing in the Ethereum community about the level of ETH 2.0 staking which Lido Finance is responsible for (30% in April) - and the level of control over this mechanism which holders of the LDO token can exercise. In June a new [governance](https://research.lido.fi/t/ldo-steth-dual-governance/2382) proposal was introduced for LDO which would give stETH holders veto powers over some aspects of decision-making about the protocol. 
+For some months now [concern](https://www.coindesk.com/layer2/2022/04/20/is-ethereum-staking-pool-lidos-growth-an-omen-of-centralization/) has been growing in the Ethereum community about the level of ETH 2.0 staking which Lido Finance is responsible for (30% in April) - and the level of control over this mechanism which holders of the LDO token can exercise. In June a new [governance](https://research.lido.fi/t/ldo-steth-dual-governance/2382) proposal was introduced for LDO which would give stETH holders veto powers over some aspects of decision-making about the protocol.
 
-To use Lido one deposits ETH and receives stETH, which will be redeemable for ETH on the new chain some months after "the merge" occurs - so the staked ETH is illiquid, but one can sell the stETH. Loss of parity between ETH and stETH was a particular stressor for [Celsius](https://decrypt.co/102812/celsius-liquidity-crunch-lido-staked-ethereum-steth), which was reliant on parity between ETH/stETH for its products to work as intended. Celsius was one of the firms that has been implicated in the contagious bad debt situation, owing significant sums to depositors and [freezing withdrawals](https://www.cnbc.com/2022/06/20/celsius-asks-users-for-more-time-to-fix-issues-after-withdrawal-freeze.html) due to inability to meet demand. 
+To use Lido one deposits ETH and receives stETH, which will be redeemable for ETH on the new chain some months after "the merge" occurs - so the staked ETH is illiquid, but one can sell the stETH. Loss of parity between ETH and stETH was a particular stressor for [Celsius](https://decrypt.co/102812/celsius-liquidity-crunch-lido-staked-ethereum-steth), which was reliant on parity between ETH/stETH for its products to work as intended. Celsius was one of the firms that has been implicated in the contagious bad debt situation, owing significant sums to depositors and [freezing withdrawals](https://www.cnbc.com/2022/06/20/celsius-asks-users-for-more-time-to-fix-issues-after-withdrawal-freeze.html) due to inability to meet demand.
 
 The European Union has moved closer to [finalizing](https://www.coindesk.com/policy/2022/06/29/eu-finalizes-crypto-money-laundering-rules/) its regulatory treatment of many aspects of crypto transactions. Many aspects of the regulation have been known for some time, but last minute negotiation was needed to determine thresholds for when a transfer between a CASP's (Crypto Asset Service Providers) wallet and an "unhosted" wallet would need to verify the recipient's identity. For transfers between CASPs they must verify each others' control of addresses. When a customer requests withdrawal to an unhosted address they must state the identity, and when it is to their own wallet they must verify control of the address when the value of the transfer exceeds 1,000 Euros. Peer to peer transactions have no reporting requirements. Long [established](https://twitter.com/paddi_hansen/status/1540640287923380225) aspects of the regulation will see significant barriers to the issuance of stablecoins, including "algorithmic" stablecoins.
 
-The founder of Maker DAO (MKR), Rune, [returned](https://thedefiant.io/makerdao-radical-makeover-plan/) to the governance forum this month, bringing with him some radical plans to shake up Maker's governance in the form of an ""[Endgame Plan](https://thedefiant.io/makerdao-radical-makeover-plan/)". Rune had been absent from the scene since the Foundation was dissolved, and he has returned just as the people who were filling the voids he left in Maker's governance in various ways were bringing their own proposals for how things should work to the Maker stakeholders. Three proposals which had been under discussion for some time met resistance in their formal votes as participation rates for MKR voting [set a new all time high](https://thedefiant.io/makerdao-governance-proposals/), with a maximum of 33% voting in the LOVE-001 proposal - a proposal which would have introduced an "oversight Core Unit", and was defeated with 60% No votes. The three big proposals to change how Maker DAO functions were all defeated, with significant late stage [redelegation](https://dirtroads.substack.com/p/-42-valkyrie-makerdao-and-our-side) of votes and the reappearance of another co-founder who had fallen out with the project long ago but retained a large voting stake and came back to vote No on everything, dropping an [expletive-filled tirade](https://forum.makerdao.com/t/a-few-thoughts-before-i-finish-voting/16078) against the community's decision to turn off the buy-back and burn mechanism.
+The founder of Maker DAO (MKR), Rune, [returned](https://thedefiant.io/makerdao-radical-makeover-plan/) to the governance forum this month, bringing with him some radical plans to shake up Maker's governance in the form of an "[Endgame Plan](https://thedefiant.io/makerdao-radical-makeover-plan/)". Rune had been absent from the scene since the Foundation was dissolved, and he has returned just as the people who were filling the voids he left in Maker's governance in various ways were bringing their own proposals for how things should work to the Maker stakeholders. Three proposals which had been under discussion for some time met resistance in their formal votes as participation rates for MKR voting [set a new all time high](https://thedefiant.io/makerdao-governance-proposals/), with a maximum of 33% voting in the LOVE-001 proposal - a proposal which would have introduced an "oversight Core Unit", and was defeated with 60% No votes. The three big proposals to change how Maker DAO functions were all defeated, with significant late stage [redelegation](https://dirtroads.substack.com/p/-42-valkyrie-makerdao-and-our-side) of votes and the reappearance of another co-founder who had fallen out with the project long ago but retained a large voting stake and came back to vote No on everything, dropping an [expletive-filled tirade](https://forum.makerdao.com/t/a-few-thoughts-before-i-finish-voting/16078) against the community's decision to turn off the buy-back and burn mechanism.
 
 { _Hint: Follow or not follow the suggested grouping of stories below._ }
 
